--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-OWNER_NAME="Ammylee01"
+OWNER_NAME="Ammylee"
 PREFIX="."
 PUBLIC_MODE='yes'
 AUTO_READ_STATUS="yes"
@@ -6,7 +6,7 @@ AUTO_DOWNLOAD_STATUS="no"
 BOT_NAME= "AMMYTZ-MD"
 IMAGE_MENU= "https://telegra.ph/file/0c225f7da5616cdcbec80.jpg"
 NUMERO_OWNER= "255693222332"
-OWNER_NAME= "᚛Ammylee01᚜"
+OWNER_NAME= "᚛Ammylee᚜"
 DATABASE_URL= "postgresql://postgres:bKlIqoOUWFIHOAhKxRWQtGfKfhGKgmRX@viaduct.proxy.rlwy.net:47738/railway"
 WARN_COUNT= "3"
 OPENAI_API_KEY= ""
